<resources>
    <!-- main activity strings-->

    <string name="app_name">StreetHelper</string>

    <string name="reportButtonText">Report a Problem</string>

    <string name="title">Welcome to StreetHelper</string>

    <string name="checkReportButtonText">View Reports</string>

    <!-- ProblemReport activity strings-->

    <string name="problemTextView">Type of Problem:</string>
    <string name="photoTextView">Please provide us a photo:</string>
    <string name="pictureButton">Camera</string>
    <string name="galleryButton">Gallery</string>
    <string name="locationTextView">Tell us where is the problem:</string>
    <string name="locationButton">Location</string>
    <string name="submitProblemButton">Submit:</string>
    <string name="title_activity_maps">Map</string>

    <!-- ProblemReport activity strings-->

    <string name="showImagesButton">Show Images</string>
    <string name="typeOfProblem">Type Of Problem</string>
    <string name="locationOfProblem">Location Of Problem</string>

</resources>
