<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95C8D8"
    tools:context=".ProblemReport">

    <include layout="@layout/toolbar_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problemTextView"
        android:text="@string/problemTextView"
        android:layout_below="@+id/toolbar"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/problemTextView"
        android:textSize="16sp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photoTextView"
        android:layout_below="@+id/spinner"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:text="@string/photoTextView"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPicture"
        android:layout_below="@+id/photoTextView"
        android:background="@drawable/round_button"
        android:textColor="#F05E23"
        android:layout_margin="5dp"
        android:text="@string/pictureButton"
        android:onClick="takePicture"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGallery"
        android:layout_below="@+id/photoTextView"
        android:background="@drawable/round_button"
        android:textColor="#F05E23"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/galleryButton"
        android:onClick="openGallery"
        />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/pictureImgView"
        android:layout_below="@+id/buttonGallery"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationTextView"
        android:layout_below="@+id/pictureImgView"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:text="@string/locationTextView"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationButton"
        android:layout_margin="5dp"
        android:layout_below="@+id/locationTextView"
        android:background="@drawable/round_button"
        android:textColor="#F05E23"
        android:text="@string/locationButton"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recieveLocation"
        android:layout_below="@+id/locationTextView"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmit"
        android:layout_below="@+id/recieveLocation"
        android:background="@drawable/round_button"
        android:textColor="#F05E23"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/submitProblemButton"
        />


</RelativeLayout>