<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95C8D8"
    tools:context=".MainActivity">


    <include layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textColor="#FDA50F"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageHome"
        android:layout_below="@+id/title"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/homepage"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/reportButton"
        android:layout_below="@+id/imageHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reportButtonText"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        />
    <Button
        android:id="@+id/checkReportsButton"
        android:layout_below="@+id/reportButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/checkReportButtonText"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="checkReports"
        />


</RelativeLayout>